fix scrollbar history

--- a/src/components/HomeComponents/History.css
+++ b/src/components/HomeComponents/History.css
@@ -1,10 +1,10 @@
 .historyContainer {
-    padding: 20px;
+    padding: 0 20px;
     width: 100%;
+    
 }
 
 .jaisodp {
-    overflow-x: scroll; /* Permitir desplazamiento horizontal */
     scrollbar-width: none; /* Ocultar barra de desplazamiento en Firefox */
 }
 
@@ -32,7 +32,7 @@
     font-size: 2em;
     font-weight: bold;
     text-align: left;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     padding-top: 10px;
     padding-left: 20px;
 
@@ -55,3 +55,9 @@
     100% { transform: rotate(360deg); }
   }
   
+  .containerResults{
+    scrollbar-width: none; /* Ocultar barra de desplazamiento en Firefox */
+  }
+  .containerResults::-webkit-scrollbar {
+    display: none; /* Ocultar barra de desplazamiento en Chrome, Safari y Edge */
+}
